--- a/babynames_shiny.Rmd
+++ b/babynames_shiny.Rmd
@@ -3,18 +3,26 @@ title:  'Babynames demo'
 author: 'Robert McDonald'
 runtime: shiny
 ---
+
+<!-- Version 0.2 -->
+
 This uses [Hadley Wickham's](https://github.com/hadley/) R packages
 [babynames](https://cran.r-project.org/package=babynames),
 [ggplot2](https://cran.r-project.org/package=ggplot2), and 
 [dplyr](https://cran.r-project.org/package=dplyr) to provide a
-simple Shiny interface to the 
+Shiny interface to the 
 [Social Security names data](https://www.ssa.gov/oact/babynames/background.html). 
-You simply type a name. Lookups are case-sensitive by default.
+Lookups are case-sensitive by default. 
+
+Code for this is available on [github](https://github.com/rmcd1024/babynames_shiny).
 
 Note that:
 
-* By checking the "Partial name match" box, you will get every name which contains the name you enter. Try checking the box
-* In most cases, checking the "Ignore capitalization" box will matter only when you also check the "Partial name match" box. 
+* By checking the "Partial name match" box, you will get every name which
+contains the name you enter. Try entering the name "Jam" and checking the box.
+* In most cases, checking the "Ignore capitalization" box will matter only when
+you also check the "Partial name match" box. If you check both "Partial name
+match" and "Ignore capitalization", a search for "Ja" will include "Alejandro", for example.
 * The "Data" list contains all the names included in the plot
 
 The y-axis is the proportion of babies with that name, born in that
@@ -81,7 +89,7 @@ server <- function(input, output) {
        theme_bw() + 
        xlim(1880, 2014)
    },
-   height=450
+   height=400
    )
 },
      options=list(height="1000px")   
